--- a/React/index.html
+++ b/React/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/index.css">
     <title>React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div style="background-color: rgba(0, 0, 0, 0.414);" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
