--- a/React/index.html
+++ b/React/index.html
@@ -7,7 +7,7 @@
     <title>React</title>
   </head>
   <body>
-    <div style="background-color: rgba(0, 0, 0, 0.414);" id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
